--- a/themes/ga-hugo-theme/layouts/_default/single.html
+++ b/themes/ga-hugo-theme/layouts/_default/single.html
@@ -4,6 +4,12 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Document</title>
+     <style>
+          img {
+               max-width: 100%;
+               height: auto;
+          }
+     </style>
 </head>
 <body>
      {{ partial "header" (dict "Kind" .Kind "Template" "Single") }}
