--- a/themes/ga-hugo-theme/layouts/partials/header.html
+++ b/themes/ga-hugo-theme/layouts/partials/header.html
@@ -345,15 +345,15 @@
                 
                 <li class="dropdown">
                     <button class="nav-link dropdown-toggle" aria-expanded="false">
-                        Food Care
+                        Foot Care
                         <span class="dropdown-arrow">▼</span>
                     </button>
                     <div class="dropdown-menu">
-                        <a href="/food-care/snacks" class="dropdown-item">Healthy Snacks</a>
-                        <a href="/food-care/supplements" class="dropdown-item">Supplements</a>
-                        <a href="/food-care/teas" class="dropdown-item">Herbal Teas</a>
-                        <a href="/food-care/powders" class="dropdown-item">Superfood Powders</a>
-                        <a href="/food-care/vitamins" class="dropdown-item">Vitamins</a>
+                        <a href="/foot-care/creams" class="dropdown-item">Foot Creams</a>
+                        <a href="/foot-care/scrubs" class="dropdown-item">Foot Scrubs</a>
+                        <a href="/foot-care/soaks" class="dropdown-item">Foot Soaks</a>
+                        <a href="/foot-care/deodorants" class="dropdown-item">Foot Deodorants</a>
+                        <a href="/foot-care/orthopedic" class="dropdown-item">Orthopedic Care</a>
                     </div>
                 </li>
                 
