--- a/themes/ga-hugo-theme/layouts/partials/header.html
+++ b/themes/ga-hugo-theme/layouts/partials/header.html
@@ -14,13 +14,10 @@
             --grey-light: #f0f0f0;
         }
         
-        * {
+        header * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-        }
-        
-        body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
         }
         
